# mkdocs2confluence

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SECURITY.md  Setup.md  action.yml  code-review-report.md  copilot_auto_router.json  litellm_config.yaml  pyproject.toml  testoutput.txt
.claude/commands/: changelog.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/instructions/: mk2conf-changelog.instructions.md  publisher.instructions.md
.github/skills/release/: SKILL.md
.github/workflows/: checks.yml  ci.yml  codeql.yml  copilot-setup-steps.yml  dependabot-auto-merge.yml  release.yml  scorecard.yml
backlog/: confluence-feedback-loop.md
docs/: commands.md  features.md
docs/developer/: local-ai.md
docs/superpowers/plans/: 2026-05-25-changelog-whatsnew.md  2026-06-02-admonition-title-links.md  2026-06-02-exclude-properties.md  2026-06-03-captions-and-attachment-previews.md
docs/superpowers/specs/: 2026-05-25-changelog-whatsnew-design.md  2026-06-02-admonition-title-links-design.md  2026-06-02-exclude-properties-design.md  2026-06-03-captions-and-attachment-previews-design.md
samples/tech-docs/: mkdocs.yml
samples/tech-docs/docs/: getting-started.md  index.md
samples/tech-docs/docs/guide/: configuration.md  installation.md
samples/tech-docs/docs/reference/: api.md
src/mkdocs_to_confluence/: __init__.py  cli.py  skill_installer.py
src/mkdocs_to_confluence/compiler/: __init__.py  models.py  page.py
src/mkdocs_to_confluence/emitter/: __init__.py  xhtml.py
src/mkdocs_to_confluence/ir/: __init__.py  document.py  nodes.py  treeutil.py
src/mkdocs_to_confluence/loader/: __init__.py  config.py  extra_css.py  nav.py  page.py
src/mkdocs_to_confluence/parser/: __init__.py  markdown.py
src/mkdocs_to_confluence/pdf/: __init__.py  generator.py  render.py
src/mkdocs_to_confluence/preprocess/: __init__.py  abbrevs.py  captions.py  fence.py  frontmatter.py  icons.py  includes.py  linkdefs.py
src/mkdocs_to_confluence/preview/: __init__.py  render.py  server.py
src/mkdocs_to_confluence/publisher/: changelog.py  client.py  executor.py  http_retry.py  models.py  pipeline.py  planner.py
src/mkdocs_to_confluence/skills/mkdocs-changelog/: SKILL.md
src/mkdocs_to_confluence/skills/mkdocs-changelog/scripts/: changelog_data.py
src/mkdocs_to_confluence/sync/: __init__.py  anchoring.py  command.py  comments.py  github.py  platform.py  state.py
src/mkdocs_to_confluence/transforms/: __init__.py  _kroki.py  abbrevs.py  admonition_titles.py  assets.py  attachment_previews.py  captions.py  editlink.py  footer.py  images.py  internallinks.py  mermaid.py  plantuml.py
tests/: conftest.py  test_abbrevs.py  test_admonition_titles.py  test_attachment_previews.py  test_captions.py  test_changelog_config.py  test_changelog_publish.py  test_children_macro.py  test_cli.py  test_editlink.py  test_emitter.py  test_exclude_properties_config.py  test_extra_css.py  test_footer.py  test_frontmatter.py  test_icons.py  test_images.py  test_internallinks.py  test_ir.py  test_linkdefs.py  test_loader.py  test_mermaid.py  test_page_loader.py  test_parser.py  test_pdf.py  test_plantuml.py  test_preprocess.py  test_preview.py  test_publish_client.py  test_publish_config.py  test_publish_pipeline.py  test_server.py  test_skill_installer.py  test_sync_anchoring.py  test_sync_command.py  test_sync_comments.py  test_sync_github.py  test_sync_state.py  test_treeutil.py
tests/fixtures/: mkdocs_full.yml  mkdocs_nested.yml  mkdocs_simple.yml
tests/fixtures/docs/: about.md  admonitions.md  code_blocks.md  headings.md  index.md  mixed.md
tests/fixtures/docs/guide/: configuration.md  getting-started.md  installation.md
tests/fixtures/docs/snippets/: circular_a.md  circular_b.md  level2.md  shared.md
