[project]
name = "mkdocs2confluence"
version = "0.5.25"
description = "Compile MkDocs markdown to Confluence storage format"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Anders Hybertz" }]
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0.3",
  "httpx>=0.27",
  "tinycss2>=1.5.1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "types-PyYAML",
  "bandit",
  "build",
]

[project.scripts]
mk2conf = "mkdocs_to_confluence.cli:main"

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "tinycss2"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=mkdocs_to_confluence --cov-report=term-missing --cov-report=xml --junitxml=junit.xml -o junit_family=legacy"

[tool.coverage.run]
source = ["mkdocs_to_confluence"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]