[project]
name = "mkdocs2confluence"
version = "0.7.5"
description = "Publish MkDocs Material pages to Confluence Cloud — admonitions, Mermaid diagrams, tabs, page properties and more"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Anders Hybertz" }]
requires-python = ">=3.12"
keywords = [
  "mkdocs",
  "confluence",
  "atlassian",
  "documentation",
  "publishing",
  "material-for-mkdocs",
  "markdown",
  "storage-format",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup",
  "Topic :: Utilities",
]
dependencies = [
  "PyYAML>=6.0.3",
  "httpx>=0.27",
  "tinycss2>=1.5.1",
]

[project.urls]
Homepage = "https://github.com/jeckyl2010/mkdocs2confluence"
Repository = "https://github.com/jeckyl2010/mkdocs2confluence"
Issues = "https://github.com/jeckyl2010/mkdocs2confluence/issues"
Changelog = "https://github.com/jeckyl2010/mkdocs2confluence/releases"

[project.optional-dependencies]
pdf = [
  "weasyprint>=60.0",
]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "types-PyYAML",
  "bandit",
  "build",
]

[project.scripts]
mk2conf = "mkdocs_to_confluence.cli:main"

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "tinycss2"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "weasyprint"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=mkdocs_to_confluence --cov-report=term-missing --cov-report=xml --junitxml=junit.xml -o junit_family=legacy"

[tool.coverage.run]
source = ["mkdocs_to_confluence"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "radon>=6.0.1",
    "vulture>=2.16",
]
