[project]
name = "mkdocs2confluence"
version = "0.17.3"
description = "Publish MkDocs Material pages to Confluence Cloud — admonitions, Mermaid diagrams, tabs, page properties and more"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Anders Hybertz" }]
requires-python = ">=3.12"
keywords = [
  "mkdocs",
  "confluence",
  "atlassian",
  "documentation",
  "publishing",
  "material-for-mkdocs",
  "markdown",
  "storage-format",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup",
  "Topic :: Utilities",
]
dependencies = [
  "PyYAML>=6.0.3",
  "httpx>=0.28",
  "idna>=3.18",
  "tinycss2>=1.5.1",
]

[project.urls]
Homepage = "https://github.com/jeckyl2010/mkdocs2confluence"
Repository = "https://github.com/jeckyl2010/mkdocs2confluence"
Issues = "https://github.com/jeckyl2010/mkdocs2confluence/issues"
Changelog = "https://github.com/jeckyl2010/mkdocs2confluence/releases"

[project.optional-dependencies]
pdf = [
  "weasyprint>=69.0",
]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "types-PyYAML",
  "bandit",
  "build",
  "pre-commit",
]

[project.scripts]
mk2conf = "mkdocs_to_confluence.cli:main"

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mkdocs_to_confluence" = ["skills/**/*.md", "skills/**/*.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
extra_checks = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "tinycss2"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "weasyprint"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=mkdocs_to_confluence --cov-report=term-missing --cov-report=xml --junitxml=junit.xml -o junit_family=legacy"

[tool.coverage.run]
source = ["mkdocs_to_confluence"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

# Architecture boundaries — enforces the compile pipeline stage separation
# documented in .github/copilot-instructions.md. Higher layers may import lower
# ones; siblings joined by "|" must stay independent of each other.
[tool.importlinter]
root_package = "mkdocs_to_confluence"

[[tool.importlinter.contracts]]
name = "Compiler pipeline stage layering"
type = "layers"
containers = ["mkdocs_to_confluence"]
layers = [
    "sync",
    "publisher",
    "compiler",
    "preprocess | parser | transforms | emitter",
    "ir | loader",
]

[[tool.importlinter.contracts]]
name = "Renderer layering (preview/pdf)"
type = "layers"
containers = ["mkdocs_to_confluence"]
layers = [
    "pdf",
    "preview",
]

[dependency-groups]
dev = [
    "import-linter>=2.12",
    "pip-audit>=2.10.1",
    "radon>=6.0.1",
    "vulture>=2.16",
]
